--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,3 +1,4 @@
+
 nav {
   /* color: white; */
   background-color: rgb(24, 24, 24, 0.5);
@@ -8,7 +9,7 @@ nav {
   width: 100%;
   height: 50px;
   position: absolute;
-  bottom: 0;
+  top: 0;
 }
 
 .nav-fixed {
@@ -17,6 +18,7 @@ nav {
   top: 0;
   width: 100%;
   margin: 0;
+  left: 0;
 
   /* margin-bottom: 20px; */
 }
